Ensure annotation delete button correctly overlaps annotation on mobile

--- a/src/app/styles/components/_home.scss
+++ b/src/app/styles/components/_home.scss
@@ -1,4 +1,3 @@
-$home-bg: $lighter-gray-bg;
 $home-content-padding: 23px;
 
 .home {
