--- a/src/app/styles/components/annotation/_annotation.scss
+++ b/src/app/styles/components/annotation/_annotation.scss
@@ -5,6 +5,7 @@
 
   display: flex;
   font-size: $annotation-font-size;
+  position: relative;
 }
 
 .annotation__avatar {
@@ -49,17 +50,18 @@
 .annotation__actions {
   flex: 1;
   align-self: flex-start;
-
   text-align: right;
-  position: relative;
 }
 
 .annotation__delete {
   @include close-button(21px);
   position: absolute;
-  top: -4px;
-  right: 15px;
-  // @include gray-text(12.5px);
+  top: 10px;
+  right: 0;
+  height: 30px;
+  width: 30px;
+  background-color: $home-bg;
+  border-radius: 30px;
 }
 
 .annotation__body {
